--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": " drizzle-kit push",
+    "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.17.0",
@@ -15,9 +17,12 @@
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.42.0",
     "framer-motion": "^12.8.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
+    "pg": "^8.15.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
@@ -26,7 +31,13 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/node": "22.14.1",
+    "@types/pg": "^8.11.13",
+    "@types/react": "19.1.2",
+    "drizzle-kit": "^0.31.0",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.2.8"
+    "tsx": "^4.19.3",
+    "tw-animate-css": "^1.2.8",
+    "typescript": "5.8.3"
   }
 }
